2022-09-21T16:38:27Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3099550692
* notice: last 14d: unq all: 10 43
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 342 534
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 342 533
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-09-07]

2022-09-21T08:35:12Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3096330579
* notice: last 14d: unq all: 10 44
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 341 533
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 342 534
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-21]

2022-09-20T16:35:17Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3091839272
* notice: last 14d: unq all: 10 43
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 340 532
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 341 533
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-20]

2022-09-20T02:32:13Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3087023093
* notice: last 14d: unq all: 10 42
* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 339 531
* notice: next accum: outdated-unq outdated-all / unq all: 311 490 / 340 532
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2022-09-19]

2022-09-19T08:34:33Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3080993385