@@ -1,23 +1,16 @@
 {
-  "timestamp" : "2022-09-21T16:38:27Z",
-  "count_outdated" : 490,
-  "uniques_outdated" : 311,
-  "count" : 533,
-  "uniques" : 342,
+  "timestamp" : "2022-09-22T02:30:17Z",
+  "count_outdated" : 492,
+  "uniques_outdated" : 312,
+  "count" : 528,
+  "uniques" : 336,
   "clones" : [
     {
-      "timestamp": "2022-09-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 12,
-      "count_minmax": [ 8, 12 ],
-      "uniques": 10,
-      "uniques_minmax": [ 8, 10 ]
+      "count": 5,
+      "count_minmax": [ 5, 12 ],
+      "uniques": 4,
+      "uniques_minmax": [ 4, 10 ]
     },
     {
       "timestamp": "2022-09-09T00:00:00Z",
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
