@@ -1,16 +1,11 @@
 {
-  "count": 43,
-  "uniques": 10,
+  "count": 36,
+  "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-09-07T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-09-08T00:00:00Z",
-      "count": 12,
-      "uniques": 10
+      "count": 5,
+      "uniques": 4
     },
     {
       "timestamp": "2022-09-09T00:00:00Z",
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-09-21T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
