@@ -1,3 +1,11 @@
+2022-09-22T02:30:17Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3102460937
+* notice: last 14d: unq all: 4 36
+* notice: prev accum: outdated-unq outdated-all / unq all: 311 490 / 342 533
+* notice: next accum: outdated-unq outdated-all / unq all: 312 492 / 336 528
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -6 -7 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-09-07] / [2022-09-08 2022-09-21]
+
 2022-09-21T16:38:27Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3099550692
 * notice: last 14d: unq all: 10 43
